--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: 'Villula';
     src: url('../public/assets/fonts/Villula-Regular.ttf') format('truetype');
@@ -36,4 +35,28 @@ body {
 .custom-file-input-wrapper .btn {
     position: relative;
     z-index: 1;
+}
+
+/* Стили для страницы обслуживания */
+.maintenance-container {
+  max-width: 800px;
+  margin: 0 auto;
+  border-left: 5px solid #ffc107;
+}
+
+.maintenance-container h1 {
+  color: #343a40;
+}
+
+.maintenance-container .btn-primary {
+  background-color: #0088cc;
+  border-color: #0088cc;
+  transition: all 0.3s ease;
+}
+
+.maintenance-container .btn-primary:hover {
+  background-color: #006699;
+  border-color: #006699;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
