fixed customclass in newreport and fixed navbar problems

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,6 +27,12 @@ body {
     color: #333333;
 }
 
+.content-wrapper {
+  padding-top: 70px;
+}
+
+
+
 .custom-file-input-wrapper {
     position: relative;
     display: inline-block;
